gcc/testsuite/rust/rustc/ui/type/issue-102598.rs
fn foo<'a>(_: impl 'a Sized) {}
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
// { dg-error "" "" { target *-*-* } .-3 }
// { dg-error "" "" { target *-*-* } .-4 }

fn main(){
}

